# c-enum

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cargo.yml
scripts/: enum-impl.py
src/: c_enum.rs  decl_variants.rs  example.rs  lib.rs  proc.rs
tests/: basic.rs  large.rs
