[package]
name = "c-enum"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"
description = "A macro to generate c-like enums."
license = "MIT OR Apache-2.0"
authors = ["Sean Lynch <sean@lynches.ca>"]
repository = "https://github.com/Phantomical/c-enum.git"
readme = "README.md"
categories = [
  "no-std",
  "no-std::no-alloc",
]

exclude = [
  ".github"
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
